<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.work.jsy.jiaobao2.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <android.support.v4.view.ViewPager
        android:id="@+id/fragment_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMenu"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/first"
            style="@style/bottom_textView"
            android:drawableTop="@drawable/focused_ic_home"
            android:text="@string/first" />

        <TextView
            android:id="@+id/second"
            style="@style/bottom_textView"
            android:drawableTop="@drawable/focused_ic_assigment"
            android:text="@string/second" />

        <TextView
            android:id="@+id/third"
            style="@style/bottom_textView"
            android:drawableTop="@drawable/focused_ic_chrome"
            android:text="@string/third" />

        <TextView
            android:id="@+id/fourth"
            style="@style/bottom_textView"
            android:drawableTop="@drawable/focused_ic_card"
            android:text="@string/fourth" />

        <TextView
            android:id="@+id/fifth"
            style="@style/bottom_textView"
            android:drawableTop="@drawable/focused_ic_bookmark"
            android:text="@string/fifth" />

    </LinearLayout>
</LinearLayout>
